# Robot_Config_UI

./: .env  .gitignore  Dockerfile  PluginCard.py  README.md  docker-compose-prod.yaml  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
spiriRobotUI/: main.py  settings.py
spiriRobotUI/classes/: Plugin.py  PluginCard.py  ToggleButton.py
spiriRobotUI/components/: Header.py  PluginCard.py  PluginDetails.py  PluginDialog.py  Sidebar.py  ToggleButton.py  store.py
spiriRobotUI/libs/: plugins.yaml
spiriRobotUI/pages/: NetworkSettingsPage.py  PluginsPage.py  SystemMonitorPage.py
spiriRobotUI/ui/: ToggleButton.py  styles.py
spiriRobotUI/utils/: BindableObject.py  EventBus.py  Plugin.py  PluginCard.py  plugin_utils.py  plugins.py  plugins_page_utils.py  repo_utils.py  styles.py  system_utils.py
ui/: ToggleButton.py
