[project]
name = "robot-config-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "gitpython>=3.1.44",
    "loguru>=0.7.3",
    "nicegui>=2.20.0",
    "psutil>=7.0.0",
    "py-cpuinfo>=9.0.0",
    "speedtest-cli>=2.1.3",
]
